[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "stresslog"
version = "1.7.2"
description = "Library for stress calculations from well logs"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<=3.14"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Arkadeep Ghosh", email = "arkadeep_ghosh@rocklab.in" }
]
dependencies = [
    "pandas>=2.0",
    "numpy>=2.0.0",
    "scipy",
    "welly",
    "pint",
    "matplotlib",
    "plotly",
    "dlisio",
    "setuptools>=42,<81"
]

[project.urls]
Homepage = "https://www.rocklab.in/stresslog"
Documentation = "https://stresslog.readthedocs.io/en/stable/"
Source = "https://github.com/GeoArkadeep/Stresslog"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]